# mage

./: Cargo.toml  readme.md  run-g3.sh  run.sh
domain/: Cargo.toml
domain/src/: caster.rs  cfg.rs  components.rs  damage.rs  error.rs  events.rs  lib.rs  loader.rs  math.rs  models.rs  player.rs  spell.rs  systems.rs
domain/tests/: acceptance.rs
g3/: project.godot  textures
g3/.import/: blood01.png-85e9bd03a6dc2e8dca6261552f5cc0c7.md5  blood01.png-85e9bd03a6dc2e8dca6261552f5cc0c7.stex  button_experience_hover.png-c66a1a83ccf48fb5c51747a56c6aeb36.md5  button_experience_hover.png-c66a1a83ccf48fb5c51747a56c6aeb36.stex  button_experience_normal.png-630654e271bec33af7233b9154a0f985.md5  button_experience_normal.png-630654e271bec33af7233b9154a0f985.stex  button_experience_pressed.png-bb31829247e3a0a5e1cb2894c0a0dad4.md5  button_experience_pressed.png-bb31829247e3a0a5e1cb2894c0a0dad4.stex  button_plus.png-8ce2e5c9983fd9226658bb3a79caa6d9.md5  button_plus.png-8ce2e5c9983fd9226658bb3a79caa6d9.stex  button_spell_disabled.png-e57cc1dcbbea41824c18b649694068ce.md5  button_spell_disabled.png-e57cc1dcbbea41824c18b649694068ce.stex  button_spell_enabled.png-99b5780a0082c44384094c71c8ef0e34.md5  button_spell_enabled.png-99b5780a0082c44384094c71c8ef0e34.stex  button_spell_glow.png-13a8c6f6ebf00243f62d6cce9f74c079.md5  button_spell_glow.png-13a8c6f6ebf00243f62d6cce9f74c079.stex  (+34 more)
g3/scenes/: arena.tscn  arena_ui.tscn  (+4 more)
g3rust/: Cargo.toml
g3rust/src/: lib.rs  utils.rs
g4/: GameApi.gdextension  arena.tscn  icon.svg.import  main.tscn  player.tscn  project.godot
g4rust/: Cargo.toml
(+35 files in other folders)
