[package]
name = "domain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.22"
rand = "0.8"
specs = { version = "0.19", features = ["serde"] }
specs-derive = "0.4"
shred = { version = "0.14", default-features = false }
shred-derive = "0.6"
itertools = "0.10"
log="0.4"
env_logger="0.10"
approx = "0.5.1"